# local-gmail-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: automation.md  development.md  labels.md  setup.md  usage.md
scripts/: update_readme_coverage.py
src/local_gmail_agent/: __init__.py  account_store.py  analysis.py  automation.py  automation_store.py  cli.py  config.py  gmail_client.py  label_store.py  llm_client.py  logging.py  readme_coverage.py  rules.py  schemas.py
tests/: test_account_store.py  test_analysis.py  test_automation.py  test_cli.py  test_config.py  test_label_store.py  test_llm_client.py  test_readme_coverage.py  test_rules.py  test_schemas.py
