[project]
name = "local-gmail-agent"
version = "0.1.0"
description = "Local-first Gmail labeling and archiving with Gmail API and LM Studio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-api-python-client>=2.0.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.0",
  "httpx>=0.28.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
local-gmail-agent = "local_gmail_agent.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_gmail_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/local_gmail_agent"]

[tool.coverage.report]
show_missing = true
skip_covered = false
